# nopvel-swarm

./: .env  .env.example  README.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  setup-windows.bat  setup.bat  setup.sh  start-novelswarm.bat
backend/: error.txt  error2.txt  error3.txt  pyproject.toml  run.py  traceback.txt
backend/app/: __init__.py  config.py
backend/app/agent/: __init__.py  adapter.py  base.py  goals.py  memory.py  planning.py  specialized.py
backend/app/api/: enhanced.py  graph.py  pipeline_api.py  projects.py  report.py  simulation.py  snowflake_api.py  worldgen.py
backend/app/models/: schemas.py
backend/app/services/: coherence_validator.py  deep_outliner.py  enhanced_simulation_engine.py  entity_extractor.py  graph_builder.py  llm_client.py  ontology_generator.py  persona_generator.py  pipeline.py  report_agent.py  simulation_engine.py  vector_memory.py  world_generator.py  world_ontology.py  world_storage.py
backend/chroma_data/099f9e2559d7/: chroma.sqlite3
backend/chroma_data/41ecf2e55fb3/: chroma.sqlite3
backend/chroma_data/44569d03d943/: chroma.sqlite3
backend/chroma_data/55de3ce1166e/: chroma.sqlite3
backend/chroma_data/56781b8703ec/: chroma.sqlite3
backend/chroma_data/5c5040b6579b/: chroma.sqlite3
backend/chroma_data/6d79c82c424e/: chroma.sqlite3
backend/chroma_data/7bf5318bf3f0/: chroma.sqlite3
backend/chroma_data/90beab6714a5/: chroma.sqlite3
backend/novel_swarm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/uploads/: world_gen.db
(+1250 files in other folders)
