[project]
name = "novel-swarm-backend"
version = "0.3.0"
description = "NovelSwarm — MiroFish-style swarm intelligence for novel writing"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=5.0",
    "httpx>=0.27",
    "neo4j>=5.20",
    "chromadb>=0.4,<1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sqlite-utils>=3.36",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
